--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
     <script>
         const CONFIG = {
-            apiUrl: 'https://api.nolowcodes.com/sso',
+            apiUrl: 'xxx',
         }
 
         function tabs() {
