--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
     <script>
         const CONFIG = {
-            apiUrl: 'xxx',
+            apiUrl: 'https://api.nolowcodes.com/sso',
         }
 
         function tabs() {
@@ -104,7 +104,6 @@
 
                     if (result.success) {
                         this.showToast('success', `Sign In as ${isEmail ? 'Email' : 'Username'}`);
-                        // fetch API ที่นี่
                     } else {
                         this.showToast('error', result.error.issues.map(e => e.message).join("\n"));
                     }
@@ -137,7 +136,6 @@
                         : this.showToast('error', result.error.issues.map(e => e.message).join("\n"));
                 },
 
-                // ฟังก์ชัน Forgot Password
                 openForgotModal() {
                     this.forgotEmail = '';
                     this.showForgotModal = true;
@@ -150,7 +148,6 @@
                         this.showToast('error', 'Please enter a valid email');
                         return;
                     }
-                    // ตัวอย่างส่ง API
                     this.showToast('success', 'Reset link sent to your email');
                     this.closeForgotModal();
                 }
@@ -180,13 +177,13 @@
         <!-- Tabs -->
         <div class="flex justify-center mb-8">
             <button @click="switchTab('signin')"
-                :class="tab === 'signin' ? 'text-purple-400 border-b-2 border-purple-400' : 'text-gray-400'"
+                :class="tab === 'signin' ? 'text-blue-400 border-b-2 border-blue-400' : 'text-gray-400'"
                 class="px-4 pb-2 text-lg font-semibold transition-colors duration-300">
                 Sign In
             </button>
             <span class="text-gray-500 mx-3">|</span>
             <button @click="switchTab('signup')"
-                :class="tab === 'signup' ? 'text-purple-400 border-b-2 border-purple-400' : 'text-gray-400'"
+                :class="tab === 'signup' ? 'text-blue-400 border-b-2 border-blue-400' : 'text-gray-400'"
                 class="px-4 pb-2 text-lg font-semibold transition-colors duration-300">
                 Sign Up
             </button>
@@ -196,12 +193,12 @@
         <div x-show="tab === 'signin'" x-transition x-cloak>
             <div class="mb-4">
                 <input type="text" placeholder="Enter email or username" x-model="signinEmail"
-                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-purple-400 focus:bg-gray-600 transition-all duration-300">
+                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-blue-400 focus:bg-gray-600 transition-all duration-300">
             </div>
             <div class="mb-4 relative">
                 <input :type="showSigninPassword ? 'text' : 'password'" placeholder="Enter your password"
                     x-model="signinPassword"
-                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-purple-400 focus:bg-gray-600 transition-all duration-300 pr-10">
+                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-blue-400 focus:bg-gray-600 transition-all duration-300 pr-10">
                 <span @click="showSigninPassword = !showSigninPassword"
                     class="absolute right-3 top-1/2 -translate-y-1/2 cursor-pointer text-gray-400 hover:text-white">
                     <i :class="showSigninPassword ? 'mdi mdi-eye-off' : 'mdi mdi-eye'"></i>
@@ -214,14 +211,14 @@
                 <hr class="flex-grow border-gray-600">
             </div>
             <button @click="validateSignIn"
-                class="w-full bg-purple-500 hover:bg-purple-600 active:scale-[0.98] p-3 rounded-lg font-semibold transition-transform duration-200 shadow-md hover:shadow-lg">
+                class="w-full bg-blue-500 hover:bg-blue-600 active:scale-[0.98] p-3 rounded-lg font-semibold transition-transform duration-200 shadow-md hover:shadow-lg">
                 Continue
             </button>
         </div>
         <!-- ปุ่ม Forgot Password -->
-        <div class="mt-4 text-center">
+        <div x-show="tab === 'signin'" class="mt-4 text-center">
             <button @click="openForgotModal"
-                class="text-sm text-gray-400 hover:text-purple-400 transition-colors duration-200">
+                class="text-sm text-gray-400 hover:text-blue-400 transition-colors duration-200">
                 Forgot Password?
             </button>
         </div>
@@ -230,16 +227,16 @@
         <div x-show="tab === 'signup'" x-transition x-cloak>
             <div class="mb-3">
                 <input type="text" placeholder="Enter your username" x-model="signupUsername"
-                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-purple-400 focus:bg-gray-600 transition-all duration-300">
+                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-blue-400 focus:bg-gray-600 transition-all duration-300">
             </div>
             <div class="mb-3">
                 <input type="email" placeholder="Enter your email address" x-model="signupEmail"
-                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-purple-400 focus:bg-gray-600 transition-all duration-300">
+                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-blue-400 focus:bg-gray-600 transition-all duration-300">
             </div>
             <div class="mb-4 relative">
                 <input :type="showSignupPassword ? 'text' : 'password'" placeholder="Enter your password"
                     x-model="signupPassword"
-                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-purple-400 focus:bg-gray-600 transition-all duration-300 pr-10">
+                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-blue-400 focus:bg-gray-600 transition-all duration-300 pr-10">
                 <span @click="showSignupPassword = !showSignupPassword"
                     class="absolute right-3 top-1/2 -translate-y-1/2 cursor-pointer text-gray-400 hover:text-white">
                     <i :class="showSignupPassword ? 'mdi mdi-eye-off' : 'mdi mdi-eye'"></i>
@@ -248,7 +245,7 @@
             <div class="mb-4 relative">
                 <input :type="showSignupConfirm ? 'text' : 'password'" placeholder="Confirm your password"
                     x-model="signupConfirm"
-                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-purple-400 focus:bg-gray-600 transition-all duration-300 pr-10">
+                    class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-blue-400 focus:bg-gray-600 transition-all duration-300 pr-10">
                 <span @click="showSignupConfirm = !showSignupConfirm"
                     class="absolute right-3 top-1/2 -translate-y-1/2 cursor-pointer text-gray-400 hover:text-white">
                     <i :class="showSignupConfirm ? 'mdi mdi-eye-off' : 'mdi mdi-eye'"></i>
@@ -263,7 +260,7 @@
             </div>
 
             <button @click="validateSignUp"
-                class="w-full bg-purple-500 hover:bg-purple-600 active:scale-[0.98] p-3 rounded-lg font-semibold transition-transform duration-200 shadow-md hover:shadow-lg">
+                class="w-full bg-blue-500 hover:bg-blue-600 active:scale-[0.98] p-3 rounded-lg font-semibold transition-transform duration-200 shadow-md hover:shadow-lg">
                 Continue
             </button>
         </div>
@@ -278,13 +275,12 @@
             </button>
             <h2 class="text-xl font-semibold text-white mb-4">Forgot Password</h2>
             <input type="email" x-model="forgotEmail" placeholder="Enter your email"
-                class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-purple-400 mb-4">
+                class="w-full bg-gray-700 p-3 rounded-lg outline-none focus:ring-2 focus:ring-blue-400 mb-4">
             <div class="flex justify-end gap-3">
                 <button @click="closeForgotModal" class="px-4 py-2 bg-gray-600 rounded-lg hover:bg-gray-700 transition">
                     Cancel
                 </button>
-                <button @click="sendResetLink"
-                    class="px-4 py-2 bg-purple-500 rounded-lg hover:bg-purple-600 transition">
+                <button @click="sendResetLink" class="px-4 py-2 bg-blue-500 rounded-lg hover:bg-blue-600 transition">
                     Send Link
                 </button>
             </div>
